[gd_scene load_steps=5 format=2]

[ext_resource path="res://cabanas/livro.gd" type="Script" id=1]
[ext_resource path="res://cabanas/livro.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/chanc___.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="livro" type="Node2D"]
script = ExtResource( 1 )

[node name="Livro" type="Sprite" parent="."]
position = Vector2( 336, 210 )
scale = Vector2( 0.412222, 0.25 )
texture = ExtResource( 2 )

[node name="Label1" type="Label" parent="."]
margin_left = 201.0
margin_top = 126.0
margin_right = 328.0
margin_bottom = 269.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "testando"

[node name="Label2" type="Label" parent="."]
margin_left = 348.0
margin_top = 127.0
margin_right = 475.0
margin_bottom = 270.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "testando"

[node name="Label3" type="Label" parent="."]
margin_left = 201.0
margin_top = 125.0
margin_right = 328.0
margin_bottom = 268.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "pagina 3"

[node name="Label4" type="Label" parent="."]
margin_left = 345.0
margin_top = 127.0
margin_right = 472.0
margin_bottom = 270.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "pagina 4"
